--- a/index.html
+++ b/index.html
@@ -1,11 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome at Madachart Apartment!</title>
+    <link rel="stylesheet" href="css/style.css">
+    <style>
+        
+        img {
+            opacity: 0.5;
+        }
+    </style>
 </head>
+
 <body>
-    <h1>Welcome at Madachart Apartment!</h1>
+    <div class="header">
+        <h1>Welcome at Madachart Apartment!</h1>
+    </div>
+
+    <div>
+<img src="img/DSC02198.JPG" alt="">
+
+    </div>
+
+    <footer>
+        <p>&#169; 2020 Madachart Apartment <br>
+            <a href="mailto: madachartapt@gmail.com">madachartapt@gmail.com</a>
+        </p>
+    </footer>
+
 </body>
+
 </html>
