new pages and photos has been added

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     }
   </style>
 
-  <style>
+    <style>
     .container {
       position: relative;
-      text-align: center;
+      text-align:center;
       color: crimson;
       font-weight: bold;
       font-style: italic;
@@ -49,11 +49,11 @@
     /* Navbar links */
     .topnav a {
       float: left;
-      color: #f2f2f2;
+      color: brown;
       text-align: center;
       padding: 14px 16px;
       text-decoration: none;
-      font-size: 17px;
+      font-size: 20px;
     }
   </style>
 </head>
@@ -83,30 +83,27 @@
       The apartment offers beautiful day and night views of the city, e.g. Gellért Hill, Deák Square <br> and Buda
       Hills. <br> </p>
 
-      <p>Equipment <br>
-      <p></p>
-      The apartment is stylishly furnished with modern appliances and is suitable for even longer <br> stays. Ideal:
-      for four or 4 + 1 people. <br>
-      A bedroom with a walk-in closet, a huge living room with a double sofa bed, a modern <br> kitchen and plenty of
-      windows to shine, all with three French balconies it serves to make <br> guests feel comfortable <br></p>
+      <p>Equipment <br> <p></p>
+        The apartment is stylishly furnished with modern appliances and is suitable for even longer <br> stays. Ideal:
+        for four or 4 + 1 people. <br>
+        A bedroom with a walk-in closet, a huge living room with a double sofa bed, a modern <br> kitchen and plenty of
+        windows to shine, all with three French balconies it serves to make <br> guests feel comfortable <br></p>
 
       Facilities: elevator, air conditioning, cable TV, wifi, dishwasher, washing machine, dryer, hair <br> dryer, iron,
       TV (100+ channels), DVD, iDock, fully equipped modern kitchen. <br>
-      <p>Accessibility: <br>
-      <p></p>
-      1. From the airport: airport bus or taxi <br>
-      2. From Keleti railway station: to Deák tér by M2 then 5 minutes walk <br>
-      3. From Nyugati railway station: to Deák tér by M3 then 5 minutes walk <br>
-      4. From Kelenföld railway station: take the M4 to Kálvin tér, then the M3 to Deák tér and 5 minutes walk <br>
-      5. By car: GPS coordinates: 47.497096, 19.057133 <br> </p>
+      <p>Accessibility: <br> <p></p>
+        1. From the airport: airport bus or taxi <br>
+        2. From Keleti railway station: to Deák tér by M2 then 5 minutes walk <br>
+        3. From Nyugati railway station: to Deák tér by M3 then 5 minutes walk <br>
+        4. From Kelenföld railway station: take the M4 to Kálvin tér, then the M3 to Deák tér and 5 minutes walk <br>
+        5. By car: GPS coordinates: 47.497096, 19.057133 <br> </p>
 
 
     </div>
     <footer>
-
-      <p>&#169; 2020 Madachart Apartment <br>
-        <a href="mailto: madachartapt@gmail.com">madachartapt@gmail.com</a>
-      </p>
+      <h5>&#169; 2020 Madachart Apartment</h5>
+      <h5>Hungary /Budapest / Károly körút </h5>
+      <h5>GPS coordinates: 47.497096, 19.057133</h5>
     </footer>
 
 </body>
