--- a/pages/about.html
+++ b/pages/about.html
@@ -13,23 +13,28 @@
     <style>
         body {
             background-color:rgb(235, 202, 173);
+            color: brown;
             text-align: center;
             font-family: 'Times New Roman', Times, serif;
-            font-size: 20px;
+            font-size: 18px;
             text-align: center;
             font-style: italic;
             margin: 20px;
             padding-top: 20px;
             padding: 20px;
+        border-width: 50px;
         }
     </style>
 </head>
-<h3>Just a few reviews from our guests who came from all over the world. Also you can check them on Airbnb site. We also had the pleasure to accomodate the well know Hungarian top model, Enikő Mihalik a few times.<h3></h3> <p>
+<div class="header">
+    <h3>Just a few reviews from our guests who came from all over the world. <br> You are welcome to check them on Airbnb site,too. <br> We also had the pleasure to accomodate the well known Hungarian top model, Enikő Mihalik a few times.<h3></h3> <p></p>
+  </div>
+
 <p></p>
-</p>
+</p> 
 „This place is stunning!!! Absolutely beautiful apartment inside, plus beautiful views from the living areas too! We did stay between Christmas and New Year so the immediate area across the road was all decorated and there was lots of action around with the Christmas markets. It’s a great area for transport connections and within walking distance to pretty much everything you want to see. Great ammenities near by too. Our family loved staying here!! I would highly recommend this place!!’ Natalie S.
 
-<p></p> „It is a very lovely house for anyone to stay in Budapest. Located in the very heart of Budapest, and the view from the living room is amazing. You can see the Budapest Eye with gorgeous sunset every evening. And inside the house, there's all you need. if you are not short on budget, and you want to live very comfortable, then this is the right place for you.” TC Lee
+<p></p> „It is a very lovely house for anyone to stay in Budapest. Located in the very heart of Budapest, and the view from the living room is amazing. You can see the Budapest Eye with gorgeous sunset every evening. And inside the house, there's all you need. if you are not short on budget, and you want to live very comfortable, then this is the right place for you.” TC Lee, 
 
  <p></p> „Great location! This place was amazingly located in the center of Budapest. Near to everything that I needed and quick walking distance to all downtown attractions. My only thing that I brought up to the property manager was the security system sensor light in the bedroom would activate every time I made a small move while in bed. Somewhat bothersome but the location of this apartment compensated for anything else. Internet was great and fast, and cable tv had a great option of English channels as well. thank you!” Javier and family
 <p></p> "Very close to all sightseeings, very central, clean, spacious combined wirh a very nice mixture of modern art design and old art deco. We can recommend this accomodation to everyone and take it again by our next travel to Budapest. You will feel good there for sure." Joja D
@@ -37,7 +42,7 @@
 
 <p></p> "Great location and modern apartment. Right across the street from the airport shuttle. Close to great food options and attractions. Only issue is the AC which requires you to empty the water every 3 hours. Luckily it was not very hot at night during our stay, so we got away with turning the AC off." Brandon W
 <p></p> „Beautiful apartment! Stunning sunset views from a 5th floor corner apartment - you can see the sun set through the Eye. Very spacious, modern and clean. Everything was clean and worked pretty well: the AC is tricky (there are 3 remotes, not sure why) and there aren't any bowls (Natalia said she would buy some). Oh, and I got stuck in the (very very old) elevator - I would recommend taking the stairs most times” Tommy
-<p></p> „ I stayed in this apartment twice now, and I will continue to come back. As a Hungarian who visits Budapest from abroad I can honestly say this apartment is everything! Fast wifi, very centeal, yet not too loud, clean, modern, spaceous. Its better in real life than on the pictures. The host is very attentive, great with communication, flexible with check in and check out times. As I said, best I could find so far.„ Eniko Mihalik 
+<p></p> „ I stayed in this apartment twice now, and I will continue to come back. As a Hungarian who visits Budapest from abroad I can honestly say this apartment is everything! Fast wifi, very centeal, yet not too loud, clean, modern, spaceous. Its better in real life than on the pictures. The host is very attentive, great with communication, flexible with check in and check out times. As I said, best I could find so far.„ Eniko Mihalik, NYC
 
 
 </body>
