--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,45 +4,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Booking</title>
-
-    <head>
-        <style>
-            body {
-                background-color: lightsalmon;
-                text-align: center;
-                font-family: 'Times New Roman', Times, serif;
-                font-size: 20px;
-                text-align: center;
-                font-style: italic;
-            }
-        </style>
-    </head>
-
-<body>
-
-
-    <p></p>
-    <p></p>
-    <h1>Contact/Booking</h1>
-
-    <p>How you can book this apartment?<br>
-    <p></p>
-    Just send a message to below adresse with your requested date and we try to confirm <br>
-    your booking as soon as possible. <br> Also if you have any questions , please do not hesitate to contact us. <br>
-    <p>
-
-    </p> See you soon! <br>
-    <p></p>
-    E-mail : madachartapt at gmail dot com <br>
-    </p>
-
-</body>
-
-</html>
-
+    <title>Document</title>
 </head>
 
+<body>
+    <a href="/pages/contact.html"></a>
+    <div> <h2>Prices and Booking</h2></div>
+
+    <h3>WE have main season and low season. You can book the apt from ....</h3>
+
+    
+        <style>
+            body {
+                background-color: wheat;
+                color: brown;
+                text-align: center;
+                font-family: 'Times New Roman', Times, serif;
+                font-size: 18px;
+                text-align: center;
+                font-style: italic;
+                margin: 20px;
+                padding-top: 20px;
+                padding: 20px;
+                border-width: 50px;
+            }
+        </style>
 
 </body>
 
