new text has been added

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -9,26 +9,62 @@
 
 <body>
     <a href="/pages/contact.html"></a>
-    <div> <h2>Prices and Booking</h2></div>
 
-    <h3>WE have main season and low season. You can book the apt from ....</h3>
+    <style>
+        body {
+            background-color: wheat;
+            color: brown;
+            text-align: center;
+            font-family: 'Times New Roman', Times, serif;
+            font-size: 18px;
+            text-align: center;
+            font-style: italic;
+            margin: 20px;
+            padding-top: 20px;
+            padding: 20px;
+            border-width: 50px;
+        }
+    </style>
 
+    <h3>Prices</h3>
+    <hr style="width:15%" , color="red">
     
-        <style>
-            body {
-                background-color: wheat;
-                color: brown;
-                text-align: center;
-                font-family: 'Times New Roman', Times, serif;
-                font-size: 18px;
-                text-align: center;
-                font-style: italic;
-                margin: 20px;
-                padding-top: 20px;
-                padding: 20px;
-                border-width: 50px;
-            }
-        </style>
+    <h5>High season : 150 euros / day <br>
+        <p></p>
+        3rd January - 31st March: 110 euros / day <br>
+        <p></p>
+        1st April- 30th June: 120 euros / day <br>
+        <p></p>
+        1st July - 31st October: 125 euros / day <br>
+        <p></p>
+        1st November - 15th December: 105 euros / day <br>
+        <br>
+        <strong>High season</strong> : the period between 20th December and 3rd January, <br> Formula 1, Sziget
+        Fesztivál, <br> and
+        the international sports events, <br> international religious and cultural events organized by Budapest/Hungary.
+        <p></p>
+        <p></p>
+        <hr style="width:20%" , color="red">
+
+        <h3>Booking</h3>
+        <h5>If you would like to book with us, <br> please feel free to send an e-mail to the address below <br> and we
+            will
+            answer your
+            questions or confirm your reservation as soon as possible.</h5>
+        <h4>E-mail adresse:madachartapt at gmail dot com </h4>
+        <hr style="width:40%" , color="red">
+        <h4>Getting to the apartment</h4>
+
+        <h5>1. From the airport: airport bus or taxi <br>
+            2. From Keleti railway station: to Deák tér by M2 then 5 minutes walk <br>
+            3. From Nyugati railway station: to Deák tér by M3 then 5 minutes walk <br>
+            4. From Kelenföld railway station: take the M4 to Kálvin tér, then the M3 to Deák tér and 5 minutes walk
+            <br>
+            <p></p> 5. By car: GPS coordinates: 47.497096, 19.057133 <br>
+        </h5>
+        <hr style="width:20%" , color="red">
+        <h3> See you soon!</h3>
+        </p>
 
 </body>
 
