--- a/pages/about.html
+++ b/pages/about.html
@@ -1,49 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reviews</title>
 </head>
+
 <body>
     <a href="/pages/about.html"></a>
     <div></div>
-    
+
     <head>
-    <style>
-        body {
-            background-color:rgb(235, 202, 173);
-            color: brown;
-            text-align: center;
-            font-family: 'Times New Roman', Times, serif;
-            font-size: 18px;
-            text-align: center;
-            font-style: italic;
-            margin: 20px;
-            padding-top: 20px;
-            padding: 20px;
-        border-width: 50px;
-        }
-    </style>
-</head>
-<div class="header">
-    <h3>Just a few reviews from our guests who came from all over the world. <br> You are welcome to check them on Airbnb site,too. <br> We also had the pleasure to accomodate the well known Hungarian top model, Enikő Mihalik a few times.<h3></h3> <p></p>
-  </div>
+        <style>
+            body {
+                background-color: rgb(235, 202, 173);
+                color: brown;
+                text-align: center;
+                font-family: 'Times New Roman', Times, serif;
+                font-size: 18px;
+                text-align: center;
+                font-style: italic;
+                margin: 10px;
+                padding-top: 10px;
+                padding: 20px;
+                border-width: 50px;
+            }
+        </style>
+    </head>
+    <div class="header">
+        <h3>You are welcome to check our reviews from some guest <br> who came from all over the world!</h3>
+        <h5> We also had the pleasure to accomodate the well known <br> Hungarian top model, Enikő
+            Mihalik.</h5>
+    </div>
 
-<p></p>
-</p> 
-„This place is stunning!!! Absolutely beautiful apartment inside, plus beautiful views from the living areas too! We did stay between Christmas and New Year so the immediate area across the road was all decorated and there was lots of action around with the Christmas markets. It’s a great area for transport connections and within walking distance to pretty much everything you want to see. Great ammenities near by too. Our family loved staying here!! I would highly recommend this place!!’ Natalie S.
+    <p></p>
+    </p>
+    „This place is stunning! Absolutely beautiful apartment inside, plus beautiful views from the living areas too! We
+    did stay between Christmas and New Year so the immediate area across the road was all decorated and there was lots
+    of action around with the Christmas markets. It’s a great area for transport connections and within walking distance
+    to pretty much everything you want to see. Great ammenities near by too. Our family loved staying here!! I would
+    highly recommend this place!!" <strong>Natalie S., Australia </strong>
+    <p></p>
+    <hr style="width:50%" , color="red">
+    <p> "This apartment was my best experience so far. Only one word to describe the location: perfect!
+        Within 100 meters, we have metro (which we didn't use because the apartment is at the center of everything) and
+        tram lines, supermarkets, restaurants and everything that is needed. The view is fantastic, for Buda and the
+        Budapest Eye. Despite being in the center of the animation, you don’t hear anything, because of the double
+        windows! And then the décor… exquisite. Great level and great taste. The building is also lovely. The apartment
+        has everything you need, including a modern coffee machine. And with coffees! In short, it was a wonderful
+        experience. My 13 year old son summed it up perfectly, when he said he liked to live in this apartment forever!
+        Congratulations!” <strong>Luis Miguel, Lisbon, Portugal</strong>
+    </p>
+    <hr style="width:40%" , color="red">
 
-<p></p> „It is a very lovely house for anyone to stay in Budapest. Located in the very heart of Budapest, and the view from the living room is amazing. You can see the Budapest Eye with gorgeous sunset every evening. And inside the house, there's all you need. if you are not short on budget, and you want to live very comfortable, then this is the right place for you.” TC Lee, 
+    <p></p> „It is a very lovely house for anyone to stay in Budapest. Located in the very heart of Budapest, and the
+    view from the living room is amazing. You can see the Budapest Eye with gorgeous sunset every evening. And inside
+    the house, there's all you need. if you are not short on budget, and you want to live very comfortable, then this is
+    the right place for you.” <strong>TC Lee, Hong Kong</strong>
+    <hr style="width:30%" , color="red">
 
- <p></p> „Great location! This place was amazingly located in the center of Budapest. Near to everything that I needed and quick walking distance to all downtown attractions. My only thing that I brought up to the property manager was the security system sensor light in the bedroom would activate every time I made a small move while in bed. Somewhat bothersome but the location of this apartment compensated for anything else. Internet was great and fast, and cable tv had a great option of English channels as well. thank you!” Javier and family
-<p></p> "Very close to all sightseeings, very central, clean, spacious combined wirh a very nice mixture of modern art design and old art deco. We can recommend this accomodation to everyone and take it again by our next travel to Budapest. You will feel good there for sure." Joja D
-
-
-<p></p> "Great location and modern apartment. Right across the street from the airport shuttle. Close to great food options and attractions. Only issue is the AC which requires you to empty the water every 3 hours. Luckily it was not very hot at night during our stay, so we got away with turning the AC off." Brandon W
-<p></p> „Beautiful apartment! Stunning sunset views from a 5th floor corner apartment - you can see the sun set through the Eye. Very spacious, modern and clean. Everything was clean and worked pretty well: the AC is tricky (there are 3 remotes, not sure why) and there aren't any bowls (Natalia said she would buy some). Oh, and I got stuck in the (very very old) elevator - I would recommend taking the stairs most times” Tommy
-<p></p> „ I stayed in this apartment twice now, and I will continue to come back. As a Hungarian who visits Budapest from abroad I can honestly say this apartment is everything! Fast wifi, very centeal, yet not too loud, clean, modern, spaceous. Its better in real life than on the pictures. The host is very attentive, great with communication, flexible with check in and check out times. As I said, best I could find so far.„ Eniko Mihalik, NYC
-
+    <p></p> „Great location! This place was amazingly located in the center of Budapest. Near to everything that I
+    needed and quick walking distance to all downtown attractions. My only thing that I brought up to the property
+    manager was the security system sensor light in the bedroom would activate every time I made a small move while in
+    bed. Somewhat bothersome but the location of this apartment compensated for anything else. Internet was great and
+    fast, and cable tv had a great option of English channels as well. thank you!” <strong>Javier and family, Michigan,
+        USA</strong>
+    <p>
+        <hr style="width:20%" , color="red">
+    </p> "Very close to all sightseeings, very central, clean, spacious combined wirh a very nice mixture of modern art
+    design and old art deco. We can recommend this accomodation to everyone and take it again by our next travel to
+    Budapest. You will feel good there for sure." <strong>Joja, Germany</strong>
+    <p></p>
+    <hr style="width:10%" , color="red">
+    </p> „Beautiful apartment! Stunning sunset views from a 5th floor corner apartment - you can see the sun set through
+    the Eye. Very spacious, modern and clean. Everything was clean and worked pretty well." Tommy, San Francisco, USA
+    <strong>Tommy, San Fransisco, USA</strong>
+    <p></p>
+    <hr style="width:8%" , color="red">
+    <p></p> „ I stayed in this apartment twice now, and I will continue to come back. As a Hungarian who visits Budapest
+    from abroad I can honestly say this apartment is everything! Fast wifi, very centeal, yet not too loud, clean,
+    modern, spaceous. Its better in real life than on the pictures. The host is very attentive, great with
+    communication, flexible with check in and check out times. As I said, best I could find so far." <strong>Enikő
+        Mihalik, NYC</strong></p>
+    <hr style="width:10%" , color="red">
+    " This is a beautifully designed apartment with amazing views. Our hostess was
+    welcoming and informative.
+    Overall
+    a delightful stay and I'll definitely be back!"<strong>Dylan, Dubai</strong>
+    </p>
+    <hr style="width:20%" , color="red">
+    <p>
+        " Stylish, luxury apartment situated in an utmost central location with panoramic view, comfortable spaces, lots
+        of natural light. As a nice addition guests can enjoy the plethora of art work on the walls." <strong>Katalin,
+            Hungary</strong>
+    </p>
 
 </body>
+
 </html>
