new text has been added

--- a/pages/about.html
+++ b/pages/about.html
@@ -9,6 +9,7 @@
 
 <body>
     <a href="/pages/about.html"></a>
+
     <div></div>
 
     <head>
@@ -29,7 +30,7 @@
         </style>
     </head>
     <div class="header">
-        <h3>You are welcome to check our reviews from some guest <br> who came from all over the world!</h3>
+        <h3>You are welcome to check the reviews of some of our  guest <br> who came from all over the world!</h3>
         <h5> We also had the pleasure to accomodate the well known <br> Hungarian top model, Enikő
             Mihalik.</h5>
     </div>
