--- a/pages/contact.html
+++ b/pages/contact.html
@@ -20,15 +20,15 @@
             text-align: center;
             font-style: italic;
             margin: 20px;
-            padding-top: 20px;
+            padding-top: 10px;
             padding: 20px;
             border-width: 50px;
         }
     </style>
-
+ <hr style="width:15%" , color="red">
     <h3>Prices</h3>
     <hr style="width:15%" , color="red">
-    
+
     <h5>High season : 150 euros / day <br>
         <p></p>
         3rd January - 31st March: 110 euros / day <br>
