--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     }
   </style>
 
-    <style>
+  <style>
     .container {
       position: relative;
-      text-align:center;
+      text-align: center;
       color: crimson;
       font-weight: bold;
       font-style: italic;
@@ -24,7 +24,7 @@
 
     .centered {
       position: absolute;
-      top: 50%;
+      top: 40%;
       left: 50%;
       transform: translate(-50%, -50%);
     }
@@ -73,33 +73,60 @@
   <div class="container">
     <img src="img/DSC02198.JPG" Nappali" style="width:100%;">
 
-    <div class=" top centered">
+    <div class="centered">
 
-      <p> Where we are? <br>
+      <div>
+        <h2>Where we are?</h2>
+      </div>
+      <p></p>
+      <p></p>
       <p></p>
       The apartment is located in the heart of the city center, within walking distance of the city’s <br> main
       attractions. A few examples: Danube bank, Chain bridge: 900 m, Parliament: 1.9 km,<br> Buda castle: 2 km, Opera
       house: 900 m, Academy of Music: 1 km, Rudas spa: 1.5 km,<br> Heroes' Square, City park: 3 km. <br>
       The apartment offers beautiful day and night views of the city, e.g. Gellért Hill, Deák Square <br> and Buda
-      Hills. <br> </p>
+      Hills. <br>
+      <div>
+        <h2>Equipment</h2>
+      </div>
 
-      <p>Equipment <br> <p></p>
-        The apartment is stylishly furnished with modern appliances and is suitable for even longer <br> stays. Ideal:
-        for four or 4 + 1 people. <br>
-        A bedroom with a walk-in closet, a huge living room with a double sofa bed, a modern <br> kitchen and plenty of
-        windows to shine, all with three French balconies it serves to make <br> guests feel comfortable <br></p>
-
-      Facilities: elevator, air conditioning, cable TV, wifi, dishwasher, washing machine, dryer, hair <br> dryer, iron,
+      <p></p>
+      <p></p>
+      <p></p>
+      The apartment is stylishly furnished with modern appliances and is suitable for even longer <br> stays. Ideal:
+      for four or 4 + 1 people. <br>
+      A bedroom with a walk-in closet, a huge living room with a double sofa bed, a modern <br> kitchen and plenty of
+      windows to shine, all with three French balconies it serves to make <br> guests feel comfortable <br>
+      Facilities: new elevator, air conditioners, cable TV, wifi, dishwasher, fridge, washing machine, dryer, hair
+      dryer, iron, baby coat,
       TV (100+ channels), DVD, iDock, fully equipped modern kitchen. <br>
-      <p>Accessibility: <br> <p></p>
-        1. From the airport: airport bus or taxi <br>
+      <p></p>
+      <p></p>
+      <div>
+        <h2>How you can get to <br> the apartment?</h2>
+      </div>
+      <p></p>
+      <p></p>
+      <p></p>
+      <p>1. From the airport: airport bus or taxi <br>
         2. From Keleti railway station: to Deák tér by M2 then 5 minutes walk <br>
         3. From Nyugati railway station: to Deák tér by M3 then 5 minutes walk <br>
         4. From Kelenföld railway station: take the M4 to Kálvin tér, then the M3 to Deák tér and 5 minutes walk <br>
-        5. By car: GPS coordinates: 47.497096, 19.057133 <br> </p>
-
-
+        5. by car: GPS coordinates: 47.497096, 19.057133
+      <p>
+      <div>
+        <h2>Good restaurants nearby</h2>
+      </div>
+      </p>
+      1. Gerlóczy Cafe, five walk minute from the apartment at Gerlóczy utca 1. <br>
+      2. Esca Studio at Dohány utca 29. <br>
+      3. Fausto's , five walk min from the apartment at Dohány utca 5. <br>
+      4. The market gastrobar at Kazinczy utca 48 , five walk minute from the apartment <br>
+      5. Beszálló Food Bar at Madach Imre út 1. , just two walk minute <br>
+      6. Gettó Gulyás at Wesselényi utca 18. <br>
+      7. Vintage Garden at Dob utca 21. <br>
     </div>
+
     <footer>
       <h5>&#169; 2020 Madachart Apartment</h5>
       <h5>Hungary /Budapest / Károly körút </h5>
