target blank has been added

--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
 
   <div class="topnav">
     <a href="#home">Home</a>
-    <a href="pages/gallery.html">Gallery</a>
-    <a href="pages/about.html">About</a>
-    <a href="pages/contact.html">Contact</a>
+    <a target="blank" href="pages/gallery.html">Gallery</a>
+    <a target="blank" href="pages/about.html">About</a>
+    <a target="blank" href="pages/contact.html">Contact</a>
   </div>
   <div class="container">
     <img src="img/DSC02198.JPG" Nappali" style="width:100%;">
@@ -128,9 +128,9 @@
     </div>
 
     <footer>
-      <h5>&#169; 2020 Madachart Apartment</h5>
-      <h5>Hungary /Budapest / Károly körút </h5>
-      <h5>GPS coordinates: 47.497096, 19.057133</h5>
+      <p>&#169; 2020 Madachart Apartment</p>
+      <p>Hungary /Budapest / Károly körút</p>
+      <p>GPS coordinates: 47.497096, 19.057133</p>
     </footer>
 
 </body>
