new photos has been added

--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -9,7 +9,8 @@
 
 <body>
 
-  
+  <div><img src="/img/DSC02196.JPG" style="width: 100%;" alt="1" ></div>
+  <div><img src="/img/DSC02226.JPG" style="width: 100%;" alt="2"> </div>
     
 
  
