JPG letters has been changed

--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -9,8 +9,9 @@
 
 <body>
 
-  <div><img src="/img/DSC02196.JPG" style="width: 100%;" alt="1" ></div>
-  <div><img src="/img/DSC02226.JPG" style="width: 100%;" alt="2"> </div>
+  <div><img src="/img/DSC02196.jpg" style="width: 100%;" alt="1" ></div>
+  <div><img src="/img/DSC02226.jpg" style="width: 100%;" alt="2"> </div>
+  <div> <img src="/img/DSC02206.jpg"  style="width: 100%;"alt="3"> </div>
     
 
  
