inside navigation has been added

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Welcome at Madachart Apartment!</title>
   <link rel="stylesheet" href="css/style.css">
-  <style>
+
+    <style>
     img {
       opacity: 0.5;
     }
@@ -66,9 +67,9 @@
 
   <div class="topnav">
     <a href="#home">Home</a>
-    <a target="blank" href="pages/gallery.html">Gallery</a>
-    <a target="blank" href="pages/about.html">About</a>
-    <a target="blank" href="pages/contact.html">Contact</a>
+    <a href="pages/gallery.html" target="_self">Gallery</a>
+    <a href="pages/about.html" target="_self">About</a>
+    <a href="pages/contact.html" target="_self">Contact</a>
   </div>
   <div class="container">
     <img src="img/DSC02198.JPG" Nappali" style="width:100%;">
