new photos has been added

--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -9,13 +9,12 @@
 
 <body>
 
-  <div><img src="/img/dsc02196.jpg" style="width:100%;" alt="1"> </div>
-  <div>  <img src="/img/dsc02198.jpg" style="width:100%;" alt="2">  </div>
-  <div> <img src="/img/dsc02153.jpg" style="width:100%;" alt="3">  </div>
-  <div> <img src="/img/dsc02183.jpg" style="width:100%;" alt="4">  </div>
-  <div> <img src="/img/dsc02226.jpg" style="width:100%;" alt="5"> </div>
+  <div>  <img src="/img/dsc02198.jpg" style="width:100%;" />  </div>
+  <div> <img src="/img/dsc02153.jpg" style="width:100%;" />  </div>
+  <div> <img src="/img/dsc02183.jpg" style="width:100%;" />  </div>
+  <div> <img src="/img/dsc02226.jpg" style="width:100%;" /> </div>
+
     
-  
 </body>
 
 </html>
