changing px to em at text

--- a/pages/about.html
+++ b/pages/about.html
@@ -16,7 +16,7 @@
                 color: brown;
                 text-align: center;
                 font-family: 'Times New Roman', Times, serif;
-                font-size: 18px;
+                font-size: 1em;
                 text-align: center;
                 font-style: italic;
                 margin: 10px;
