--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
     }
 
     /* Needed to position the navbar */
-    position: relative;
+    position:relative;
     }
 
     /* Position the navbar container inside the image */
     .container {
-      position: absolute;
+      position: relative;
       margin: 10px;
       width: auto;
     }
@@ -54,7 +54,7 @@
       text-align: center;
       padding: 14px 16px;
       text-decoration: none;
-      font-size: 20px;
+      font-size: 1em;
     }
   </style>
 </head>
