--- a/pages/contact.html
+++ b/pages/contact.html
@@ -15,7 +15,7 @@
             color: brown;
             text-align: center;
             font-family: 'Times New Roman', Times, serif;
-            font-size: 18px;
+            font-size: 1em;
             text-align: center;
             font-style: italic;
             margin: 20px;
