--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -9,10 +9,10 @@
 
 <body>
 
-  <div>  <img src="/img/dsc02198.jpg" style="width:100%;"/></div>
-  <div> <img src="/img/dsc02153.jpg" style="width:100%;"/></div>
-  <div> <img src="/img/dsc02183.jpg" style="width:100%;"/></div>
-  <div> <img src="/img/dsc02226.jpg" style="width:100%;"/></div>
+  <div>  <img src="/img/atlivingroom1.JPG" style="width:100%;"/></div>
+  <div> <img src="/img/atlivingroom2.JPG" style="width:100%;"/></div>
+  <div> <img src="/img/athall.JPG" style="width:100%;"/></div>
+  <div> <img src="/img/atbedroom.JPG" style="width:100%;"/></div>
 
     
 </body>
