--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -9,8 +9,8 @@
 
 <body>
 
-  <div>  <img src="/img/atlivingroom1.JPG" style="width:100%;"/></div>
-  <div> <img src="/img/atlivingroom2.JPG" style="width:100%;"/></div>
+  <div class="container">  <img src="/img/atlivingroom1.JPG" style="width:100%;"/></div>
+  <div class="container" > <img src="/img/atlivingroom2.JPG" style="width:100%;"/></div>
   <div> <img src="/img/athall.JPG" style="width:100%;"/></div>
   <div> <img src="/img/atbedroom.JPG" style="width:100%;"/></div>
 
