settings around photos

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <a href="pages/contact.html" target="_self">Contact</a>
   </div>
   <div class="container">
-    <img src="/img/DSC02198.JPG" Nappali" style="width:100%;">
+    <img src="img/DSC02198.JPG" Nappali" style="width:100%;">
 
     <div class="centered">
 
