setting the containers to be responsive

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 </head>
 
 <body>
-  <div class="header">
+  <div class="header" style="position: relative;">
     <h1>Welcome at Madachart Apartment!</h1>
 
   </div>
@@ -72,7 +72,7 @@
     <a href="pages/contact.html" target="_self">Contact</a>
   </div>
   <div class="container">
-    <img src="img/DSC02198.JPG" Nappali" style="width:100%;">
+    <img src="img/DSC02198.JPG" style="width:100%;">
 
     <div class="centered">
 
@@ -128,7 +128,7 @@
       7. Vintage Garden at Dob utca 21. <br>
     </div>
 
-    <footer>
+    <footer style="position: relative;">
       <p>&#169; 2020 Madachart Apartment</p>
       <p>Hungary /Budapest / Károly körút</p>
       <p>GPS coordinates: 47.497096, 19.057133</p>
