--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -9,11 +9,9 @@
 
 <body>
 
-  <div><img src="/img/atlivingroom1.jpg" style="width:100%" /></div>
-  <div><img src="/img/atlivingroom2.JPG" style="width:100%" /></div>
-  <div><img src="/img/atbedroom.JPG" style="width:100%" /></div>
-  <div><img src="/img/bathroom3.JPG" style="width:100%" /></div>
-
+  <div><img src="/img/atlivingroom1.jpg" style="width:100%" ></div>
+  <div><img src="/img/atlivingroom2.JPG" style="width:100%" ></div>
+  
     
 </body>
 
