setting around gallery

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 </head>
 
 <body>
-  <div class="header" style="position: relative;">
+  <div class="header">
     <h1>Welcome at Madachart Apartment!</h1>
 
   </div>
@@ -128,7 +128,7 @@
       7. Vintage Garden at Dob utca 21. <br>
     </div>
 
-    <footer style="position: relative;">
+    <footer>
       <p>&#169; 2020 Madachart Apartment</p>
       <p>Hungary /Budapest / Károly körút</p>
       <p>GPS coordinates: 47.497096, 19.057133</p>
