--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -10,8 +10,7 @@
 <body>
 
   <div><img src="/img/atlivingroom1.jpg" style="width:100%" ></div>
-  <div><img src="/img/atlivingroom2.JPG" style="width:100%" ></div>
-  
+  <div><img src="/img/athall.jpg" style="width: 100%;"></div>
     
 </body>
 
