--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0 
+  , maximum-scale=1" >
+
+  @media screen and (max-width : 760px) (for tablets and phones) 
+  
   <title>Welcome at Madachart Apartment!</title>
   <link rel="stylesheet" href="css/style.css">
 
-    <style>
+  <style>
     img {
       opacity: 0.5;
     }
@@ -20,7 +24,7 @@
       color: crimson;
       font-weight: bold;
       font-style: italic;
-            
+
     }
 
     .centered {
