--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -9,8 +9,8 @@
 
 <body>
 
-  <div><img src="../img/atlivingroom1.jpg" width="100%" height="400"></div>
-  <div><img src="../img/atlivingroom2.jpg" width="100%" height="400"></div>
+  <div><img src="./img/atlivingroom2" width="100%" height="400"></div>
+  <div><img src="./img/atlivingroom1" width="100%" height="400"></div>
     
 </body>
 
