settings around photos

--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -9,9 +9,8 @@
 
 <body>
 
-  <div><img src="./img/atlivingroom2" width="100%" height="400"></div>
-  <div><img src="./img/atlivingroom1" width="100%" height="400"></div>
-    
+  <div><img src="/img/atlivingroom2.jpg" width="100%" height="400"></div>
+  <div><img src="/img/atbedroom.jpg" width="100%" height="400"></div>
 </body>
 
 </html>
