settings around photos

--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -9,8 +9,8 @@
 
 <body>
 
-  <div><img src="/img/atlivingroom1.JPG"  width="100%" height="400"></div>
-  <div><img src="/img/atlivingroom2.JPG" width="100%" height="400"> </div>
+  <div class="container"><img src="/img/atlivingroom1.JPG"  width="100%" height="400"></div>
+  <div class="container"><img src="/img/atlivingroom2.JPG" width="100%" height="400"> </div>
   
 </body>
 
