--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -9,9 +9,9 @@
 
 <body>
 
-  <div class="container"><img src="/img/atlivingroom1.JPEG"  width="100%" height="500"></div>
-  <div class="container"><img src="/img/atlivingroom2.JPEG" width="100%" height="500"> </div>
-  
+  <div class="container"><img src="../img/atlivingroom1.JPEG" width="100%" height="500"></div>
+  <div class="container"><img src="../img/atlivingroom2.JPEG" width="100%" height="500"> </div>
+  <div> <img src="../img/athall.JPEG" alt="" width="100%" height="500"></div>
 </body>
 
 </html>
