adding new photos

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <a href="pages/contact.html" target="_self">Contact</a>
   </div>
   <div class="container">
-    <img src="img/DSC02198.JPG" style="width:100%;">
+    <img src="img/DSC02198.JPEG" style="width:100%;">
 
     <div class="centered">
 
