--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -12,6 +12,8 @@
   <div class="container"><img src="../img/atlivingroom1.JPEG" width="100%" height="500"></div>
   <div class="container"><img src="../img/atlivingroom2.JPEG" width="100%" height="500"> </div>
   <div> <img src="../img/athall.JPEG" alt="" width="100%" height="500"></div>
+  <div class="container"><img src="../img/atbedroom.JPEG" width="100%" height="500"> </div>
+  <div class="container"><img src="../img/bathroom3.JPEG" width="100%" height="500"> </div>
 </body>
 
 </html>
